# admino

./: .gitignore  Cargo.toml  LICENSE  README.md  config.default.json  config.default.toml
db/: create_table.sql
public/: index.html
src/: error.rs  main.rs  opt.rs
src/controller/: mod.rs  permission.rs  role.rs  user.rs
src/model/: mod.rs  permission.rs  role.rs  user.rs
src/service/: mod.rs  permission.rs  role.rs  user.rs
src/util/: crypto.rs  db.rs  http.rs  identity.rs  mod.rs  types.rs  user.rs
static/: index.html
