[package]
name = "admino"
version = "0.1.0"
authors = ["gengteng <me@gteng.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "2.0.0", features = [ "secure-cookies" ]}
actix-rt = "1.0.0"
actix-files = "0.2.1"

futures = "0.3.1"

tokio = { version = "0.2.10", features = [ "fs" ] }
tokio-postgres = "0.5.1"
deadpool = "0.5.1"
deadpool-postgres = "0.5.2"
postgres-types = { version = "0.1.0", features = [ "with-chrono-0_4", "derive" ] }
tokio-pg-mapper = "0.1.4"
tokio-pg-mapper-derive = "0.1.4"

redis = "0.15.1"
deadpool-redis = "0.5.2"

rand = "0.7.3"
time = "0.1.42"
chrono = { version = "0.4.10", features = [ "serde" ]}
phonenumber = "0.2.3"
serde = { version = "1.0.104", features = [ "derive" ] }
serde_json = "1.0.44"
hex-serde = "0.1.0"
failure = "0.1.6"

derive_more = "0.99.2"
config = "0.10.1"

log = { version = "0.4.8", features = [ "serde" ]}
env_logger = "0.6.2"