[package]
name = "admino"
version = "0.1.0"
authors = ["gengteng <me@gteng.org>"]
description = "Yet another actix-based admin system"
license = "MIT"
homepage = "https://github.com/gengteng/admino"
repository = "https://github.com/gengteng/admino"
documentation = "https://github.com/gengteng/admino"
keywords = [ "admin", "actix", "RBAC" ]
readme = "README.md"
edition = "2018"

[dependencies]
actix-web = { version = "2.0.0", features = [ "secure-cookies" ]}
actix-rt = "1.0.0"
actix-files = "0.2.1"
actix-service = "1.0.5"

futures = "0.3.4"

tokio = { version = "0.2.11", features = [ "fs" ] }
tokio-postgres = "0.5.2"
deadpool = "0.5.1"
deadpool-postgres = "0.5.4"
postgres-types = { version = "0.1.0", features = [ "with-chrono-0_4", "derive" ] }
tokio-pg-mapper = "0.1.4"
tokio-pg-mapper-derive = "0.1.4"

redis = "0.15.1"
deadpool-redis = "0.5.2"

itertools = "0.8.2"
rand = "0.7.3"
time = "0.1.42"
chrono = { version = "0.4.10", features = [ "serde" ]}
phonenumber = "0.2.4"
mailchecker = "3.3.4"
serde = { version = "1.0.104", features = [ "derive" ] }
serde_json = "1.0.48"
hex-serde = "0.1.0"
failure = "0.1.6"

derive_more = "0.99.2"
config = "0.10.1"

log = { version = "0.4.8", features = [ "serde" ]}
env_logger = "0.7.1"
